# ClassOptimize

./: .gitignore  BuildAndDebGenScript  CMakeLists.txt  README.md  genetique.hpp  main.cpp  pubKey.gpg
data/: Manuel.odt
debian/: changelog  classoptimize_1.0-0_amd64.deb  control  copyright  files  install
include/ClassOptimize/: DataNoteBook.hpp  WindowMain.hpp  genetique.hpp  gtkmmGraph.hpp  gtkmmcomponent.hpp  gtkmmutilitys.hpp  utilitys.hpp
includes/: gtkmmGraph.hpp  gtkmmcomponent.hpp  gtkmmutilitys.hpp
src/: main.cpp
